...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/space_small"
        android:layout_marginStart="@dimen/space_small"
        android:layout_toLeftOf="@+id/ivRemove"
        android:layout_toStartOf="@+id/ivRemove"
        android:paddingTop="@dimen/space_small"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size_medium"
        tools:text="Title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvTitle"
        android:layout_marginLeft="@dimen/space_small"
...
